--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -507,7 +507,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/color_FCFCFC"
                         android:textSize="@dimen/textSize14sp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="@+id/etIdentity"
                         app:layout_constraintTop_toTopOf="@+id/etIdentity"
                         app:layout_constraintBottom_toBottomOf="@+id/etIdentity" />
@@ -614,7 +614,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/color_FCFCFC"
                         android:textSize="@dimen/textSize14sp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="@+id/etIdentity2"
                         app:layout_constraintTop_toTopOf="@+id/etIdentity2"
                         app:layout_constraintBottom_toBottomOf="@+id/etIdentity2" />
@@ -822,7 +822,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:endIcon="@drawable/ic_arrow_gray"
                         app:isResponsiveIconColor="false"
                         app:labelText="@string/security_pb"
@@ -861,7 +861,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:endIcon="@drawable/ic_arrow_gray"
                         app:hintText="@string/hint_security_answer"
                         app:isResponsiveIconColor="false"
