--- a/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
@@ -4,42 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context="org.cxct.sportlottery.ui.component.DateRangeSearchView">
 
-    <TextView
-        android:id="@+id/tv_calendar_title"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_191919_FCFCFC"
-        android:gravity="center"
-        android:minHeight="40dp"
-        android:paddingVertical="4dp"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold"
-        tools:text="開始日期" />
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="@dimen/margin_20"
+        android:layout_marginBottom="@dimen/margin_20"
+        custom:cardBackgroundColor="@color/color_FFFFFF"
+        custom:cardCornerRadius="4dp"
+        android:background="@drawable/bg_white_date_picker">
 
-    <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
-        android:id="@+id/calendar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_191919_FCFCFC"
-        custom:date_selection_mode="free_range"
-        custom:default_date_color="@color/color_AEAEAE_404040"
-        custom:disable_date_color="@color/color_7F7F7F_999999"
-        custom:editable="true"
-        custom:enable_time_selection="false"
-        custom:range_color="@color/color_E8EFFD"
-        custom:range_date_color="@color/color_AEAEAE_404040"
-        custom:selected_date_circle_color="@color/color_025BE8"
-        custom:selected_date_color="@color/color_F9F9F9"
-        custom:text_size_date="16dp"
-        custom:text_size_title="16dp"
-        custom:title_color="@color/color_AEAEAE_404040"
-        custom:week_color="@color/color_909090_666666"
-        custom:week_offset="0"
-        custom:header_bg="@color/color_191919_FCFCFC"
-        />
+        <TextView
+            android:id="@+id/tv_calendar_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_191919_FCFCFC"
+            android:gravity="center"
+            android:minHeight="40dp"
+            android:paddingVertical="4dp"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:text="開始日期" />
 
+
+        <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_bbbbbb_ffffff"
+            custom:date_selection_mode="free_range"
+            custom:default_date_color="@color/color_535D76"
+            custom:disable_date_color="@color/color_A7B2C4"
+            custom:editable="true"
+            custom:enable_time_selection="false"
+            custom:range_color="@color/color_E8EFFD"
+            custom:range_date_color="@color/color_535D76"
+            custom:selected_date_circle_color="@color/color_025BE8"
+            custom:selected_date_color="@color/color_FFFFFF"
+            custom:text_size_date="14sp"
+            custom:text_size_title="14sp"
+            custom:text_size_week="14sp"
+            custom:title_color="@color/color_535D76"
+            custom:week_color="@color/color_535D76"
+            custom:week_offset="0"
+            custom:header_bg="@color/color_bbbbbb_ffffff" />
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
+
