--- a/app/src/main/res/layout/item_match_result_title.xml
+++ b/app/src/main/res/layout/item_match_result_title.xml
@@ -10,25 +10,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F3F9FF"
+        android:background="@color/color_F3F9FF"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_height="35dp"
+            android:paddingHorizontal="@dimen/margin_15"
             android:layout_weight="1"
             android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/iv_arrow"
-                android:layout_width="10dp"
-                android:layout_height="6dp"
-                android:layout_marginStart="14dp"
-                android:layout_marginEnd="8dp"
-                android:padding="1dp"
-                android:src="@drawable/ic_arrow_down_dark" />
+                android:layout_width="@dimen/margin_12"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/ic_arrow_gray_up" />
 
             <TextView
                 android:id="@+id/tv_type"
@@ -37,8 +34,8 @@
                 android:ellipsize="end"
                 android:gravity="start|center_vertical"
                 android:maxLines="1"
-                android:textColor="#025BE8"
-                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_025BE8"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="Miền Bắc" />
 
         </LinearLayout>
@@ -56,8 +53,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/first_half_game"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_6C7BA8"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="@string/first_half_game" />
 
 
@@ -68,8 +65,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/full_game"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_6C7BA8"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="@string/full_game" />
 
 
