--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -491,38 +491,42 @@
                     android:background="@color/color_bbbbbb_ffffff"
                     android:orientation="horizontal"
                     android:visibility="visible"
-                    tools:visibility="gone">
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/tv_correct_1"
-                        android:layout_width="66dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="6dp"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:maxLines="1"
-                        android:textColor="@color/color_6C7BA8"
-                        android:textSize="@dimen/textSize14sp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:textColor="@color/color_select_cs_tab"
+                        android:textSize="@dimen/textSize12sp"
                         tools:text="abc" />
 
                     <TextView
                         android:id="@+id/tv_correct_2"
-                        android:layout_width="66dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="6dp"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:maxLines="1"
-                        android:textColor="@color/color_6C7BA8"
-                        android:textSize="@dimen/textSize14sp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:textColor="@color/color_select_cs_tab"
+                        android:textSize="@dimen/textSize12sp"
                         tools:text="abc" />
 
                     <TextView
                         android:id="@+id/tv_correct_3"
-                        android:layout_width="66dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:maxLines="1"
-                        android:textColor="@color/color_6C7BA8"
-                        android:textSize="@dimen/textSize14sp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:textColor="@color/color_select_cs_tab"
+                        android:textSize="@dimen/textSize12sp"
                         tools:text="abc" />
 
                 </LinearLayout>
