--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -423,6 +423,7 @@
     <color name="color_28BA78">#28BA78</color>
     <color name="color_F0A536">#F0A536</color>
     <color name="color_F2F5FA">#F2F5FA</color>
+    <color name="color_979797">#979797</color>
 
 
     <!--region keyboard-->
