--- a/awesome-calendar/src/main/res/layout/layout_calendar_month.xml
+++ b/awesome-calendar/src/main/res/layout/layout_calendar_month.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <include
@@ -13,7 +13,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/white" />
 
     <LinearLayout
         android:id="@+id/llDaysContainer"
