--- a/awesome-calendar/src/main/res/values/colors.xml
+++ b/awesome-calendar/src/main/res/values/colors.xml
@@ -2,20 +2,19 @@
 <resources>
 
     <!-- General -->
-    <color name="selected_date_circle_color">#54B948</color>
-    <color name="background">#FCFCFC</color>
+    <color name="selected_date_circle_color">#025BE8</color>
+    <color name="background">#FFFFFF</color>
     <!-- Fonts -->
-    <color name="title_color">#000</color>
-    <color name="date_color">#000</color>
-    <color name="week_color">#000</color>
+    <color name="title_color">#535D76</color>
+    <color name="date_color">#535D76</color>
+    <color name="week_color">#535D76</color>
 
     <!-- Calendar Date -->
-    <color name="default_date_color">#3b4144</color>
-    <color name="disable_date_color">#BDBDBD</color>
-    <color name="range_date_color">@color/default_date_color</color>
-    <color name="selected_date_color">#FFF</color>
-    <color name="range_bg_color">#B7C99D</color>
-    <color name="calendar_text">#474747</color>
-
+    <color name="default_date_color">#535D76</color>
+    <color name="disable_date_color">#A7B2C4</color>
+    <color name="range_date_color">#535D76</color>
+    <color name="selected_date_color">#FFFFFF</color>
+    <color name="range_bg_color">#E8EFFD</color>
+    <color name="calendar_text">#535D76</color>
 
 </resources>
