--- a/app/src/main/res/layout/fragment_bank_card.xml
+++ b/app/src/main/res/layout/fragment_bank_card.xml
@@ -254,6 +254,63 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <!-- 協議/幣種 -->
+                   <!-- <LinearLayout
+                        android:id="@+id/item_usdt_selector"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_14"
+                        android:layout_marginEnd="@dimen/margin_16"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_10"
+                            android:gravity="start|center_vertical"
+                            android:text="@string/currency_protocol"
+                            android:textColor="@color/color_535D76"
+                            android:textSize="@dimen/textSize14sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_4"
+                            android:orientation="horizontal">
+
+
+                            <ImageView
+                                android:id="@+id/iv_usdt_icon"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginEnd="12dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/ic_crypto" />
+
+                            <TextView
+                                android:id="@+id/tv_usdt_name"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="start|center_vertical"
+                                android:text="@string/select_currency_protocol"
+                                android:textColor="@color/color_BBBBBB_333333"
+                                android:textSize="@dimen/textSize12sp" />
+
+                            <ImageView
+                                android:id="@+id/imageView_usdt"
+                                android:layout_width="16dp"
+                                android:layout_height="16dp"
+                                android:layout_marginEnd="6dp"
+                                android:src="@drawable/ic_arrow_down_gray" />
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/margin_1"
+                            android:layout_marginTop="@dimen/margin_10"
+                            android:background="@color/color_E3E8EE" />
+
+                    </LinearLayout>-->
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -289,7 +346,7 @@
                             <org.cxct.sportlottery.ui.component.StatusSelectorView
                                 android:id="@+id/sv_protocol"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="35dp"
                                 android:layout_marginEnd="8dp"
                                 app:defaultBottomSheetTitleText="@string/select_currency_protocol"
                                 app:horizontalChainStyle="spread_inside"
