[Fix] OK-1196【OKBET-UI-Android-Bet Slip】VNM - Bet Slip Page Vietnamese Translation Issue (投注单页越南语翻译问题)

--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -134,7 +134,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/settled"
+                android:text="@string/settled_order"
                 android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize14sp" />
 
