--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -405,6 +405,8 @@
                     tools:text="2022-06-30" />
 
                 <View
+                    android:layout_marginTop="@dimen/margin_12"
+                    android:layout_marginEnd="@dimen/margin_12"
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@color/color_1F1F1F_E2E2E2" />
@@ -414,7 +416,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_time"
+
                     android:drawableRight="@drawable/ic_arrow_gray"
                     android:drawablePadding="7dp"
                     android:gravity="center_vertical"
@@ -453,6 +455,30 @@
                 android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold" />
+            <LinearLayout
+                android:layout_marginBottom="@dimen/dp_40"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="@dimen/margin_20"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/customer_service"
+                    android:textColor="@color/color_A5A9B3"
+                    android:textSize="@dimen/textSize14sp"/>
+
+                <TextView
+                    android:id="@+id/tv_service_show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/btn_service"
+                    android:textColor="@color/color_025BE8"
+                    android:textSize="@dimen/textSize14sp"/>
+
+            </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
