--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -607,6 +607,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:layout_marginBottom="@dimen/dp_40"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
