--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -75,6 +75,7 @@
             android:layout_marginStart="@dimen/margin_14"
             android:layout_marginEnd="@dimen/margin_14"
             android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/margin_20"
             android:layout_width="match_parent"
             android:layout_height="83dp">
             <LinearLayout
