--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -60,41 +60,20 @@
                     android:orientation="vertical"
                     app:layout_constraintGuide_percent="0.24" />
 
-                <LinearLayout
-                    android:id="@+id/titleLayout"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_single_type"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_24"
+                    android:layout_marginEnd="5dp"
+                    android:textColor="@color/color_9BB3D9_535D76"
+                    android:textSize="@dimen/textSize12sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/guideline_start"
                     app:layout_constraintTop_toTopOf="@+id/et_bet_single"
-                    app:layout_constraintBottom_toBottomOf="@+id/et_bet_single">
-
-                    <TextView
-                        android:id="@+id/tvSingle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/bet_list_single"
-                        android:textColor="@color/color_9BB3D9_535D76"
-                        android:textSize="@dimen/textSize12sp"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*"
-                        android:textColor="@color/color_9BB3D9_535D76"
-                        android:textSize="@dimen/textSize12sp"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:id="@+id/tv_single_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/color_9BB3D9_535D76"
-                        android:textSize="@dimen/textSize12sp"
-                        android:textStyle="bold"
-                        tools:text="5" />
-                </LinearLayout>
+                    app:layout_constraintBottom_toBottomOf="@+id/et_bet_single"
+                    tools:text="单场*5" />
 
                 <EditText
                     android:id="@+id/et_bet_single"
