--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -418,6 +418,7 @@
                             android:layout_weight="1">
 
                             <TextView
+                                android:id="@+id/tv_fund_detail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
@@ -440,7 +441,10 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginEnd="@dimen/margin_5"
+                                android:singleLine="true"
+                                android:ellipsize="end"
                                 android:layout_toStartOf="@+id/iv_line"
+                                android:layout_toEndOf="@+id/tv_fund_detail"
                                 android:text="@string/transaction_record"
                                 android:textColor="@color/color_A7B2C4"
                                 android:textSize="@dimen/textSize12sp" />
@@ -677,6 +681,9 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:singleLine="true"
+                                    android:ellipsize="end"
                                     android:layout_centerVertical="true"
                                     android:text="@string/game_rule"
                                     android:textColor="@color/color_A7B2C4"
@@ -918,6 +925,7 @@
                             android:layout_weight="1">
 
                             <TextView
+                                android:id="@+id/tv_aboutus"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
@@ -940,6 +948,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_toStartOf="@+id/iv_line4"
+                                android:layout_toEndOf="@+id/tv_aboutus"
+                                android:singleLine="true"
+                                android:ellipsize="end"
                                 android:text="@string/join_us_win_wealth"
                                 android:textColor="@color/color_A7B2C4"
                                 android:textSize="@dimen/textSize12sp" />
