--- a/app/src/main/res/layout/item_match_result_match_new.xml
+++ b/app/src/main/res/layout/item_match_result_match_new.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="2"
-            android:background="@color/color_191919_FCFCFC"
+            android:background="@color/color_bbbbbb_ffffff"
             android:orientation="vertical"
             android:showDividers="middle|end"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,6 +78,12 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <View
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/color_E8EFFD" />
+
         <LinearLayout
             android:id="@+id/ll_score"
             android:layout_width="0dp"
@@ -85,7 +91,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/cl_content"
             android:layout_weight="1"
-            android:background="#fff"
+            android:background="@color/color_bbbbbb_ffffff"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cl_content"
             app:layout_constraintEnd_toEndOf="parent">
@@ -100,7 +106,6 @@
                 android:textColor="@color/color_FFFFFF_535D76"
                 android:textSize="@dimen/textSize14sp"
                 android:fontFamily="@font/din_font"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_full_game_score"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +123,6 @@
                 android:textColor="@color/color_FFFFFF_535D76"
                 android:textSize="@dimen/textSize14sp"
                 android:fontFamily="@font/din_font"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -146,7 +150,7 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:background="@color/color_979797"
+        android:background="@color/color_F7F8FC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider_line">
