--- a/app/src/main/res/layout/item_play_spinner.xml
+++ b/app/src/main/res/layout/item_play_spinner.xml
@@ -8,13 +8,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="4dp"
         android:padding="5dp">
 
         <ImageView
@@ -32,7 +32,7 @@
             android:layout_marginStart="12dp"
             android:layout_weight="1"
             android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/textSize14sp"
+            android:textSize="12sp"
             tools:text="Goals O/U" />
     </LinearLayout>
 
@@ -42,6 +42,6 @@
         android:layout_marginStart="@dimen/margin_20"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_height="0.5dp"
-        android:background="@color/color_404040_e2e2e2" />
+        android:background="@color/color_996A7797" />
 
 </LinearLayout>
