--- a/app/src/main/res/drawable/bg_rectangle_4dp_blue.xml
+++ b/app/src/main/res/drawable/bg_rectangle_4dp_blue.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:right="15dp">
+    <item android:right="1dp">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="@color/color_262626_edf4ff" />
+            <corners android:radius="10dp" />
+            <solid android:color="@color/color_025BE8" />
         </shape>
     </item>
 </layer-list>
