--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -425,7 +425,9 @@
     <color name="color_F0A536">#F0A536</color>
     <color name="color_F2F5FA">#F2F5FA</color>
     <color name="color_979797">#979797</color>
-
+    <color name="color_DFEBFF">#DFEBFF</color>
+    <color name="color_10DFEBFF">#10DFEBFF</color>
+    <color name="color_EBEDF0">#EBEDF0</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
